--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.0.2",
+    "@astrojs/vercel": "^7.5.2",
     "astro": "^3.3.2",
     "tailwindcss": "^3.0.24"
   }
